test/schemas/invalid_parser/enum_ambiguous.blink
Month = Jan/1 | Jab | Mar/2
